--- a/FFXIV_Comidas_y_Pociones_Tarkin.html
+++ b/FFXIV_Comidas_y_Pociones_Tarkin.html
@@ -1564,37 +1564,37 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td><span class="level-badge">50</span></td>
+                                <td><span class="level-badge level-41-60">50</span></td>
                                 <td>Spinach Quiche</td>
                                 <td>Seafood Stew</td>
                                 <td>Crimson Cider</td>
                             </tr>
                             <tr>
-                                <td><span class="level-badge">60</span></td>
+                                <td><span class="level-badge level-41-60">60</span></td>
                                 <td>Stuffed Chysahl Greens</td>
                                 <td>Bouillabaisse</td>
                                 <td>Crimson Cider</td>
                             </tr>
                             <tr>
-                                <td><span class="level-badge">70</span></td>
+                                <td><span class="level-badge level-61-80">70</span></td>
                                 <td>Chili Crab</td>
                                 <td>Tempura Platter</td>
                                 <td>Spaghetti al Nero</td>
                             </tr>
                             <tr>
-                                <td><span class="level-badge">80</span></td>
+                                <td><span class="level-badge level-61-80">80</span></td>
                                 <td>Pumpkin Potage</td>
                                 <td>Carrot Pudding</td>
                                 <td>Pumpkin Curry</td>
                             </tr>
                             <tr>
-                                <td><span class="level-badge">90</span></td>
+                                <td><span class="level-badge level-81-100">90</span></td>
                                 <td>Tsai tou Vounou</td>
                                 <td>Tsai tou Vounou</td>
                                 <td>Smoked Chicken</td>
                             </tr>
                             <tr>
-                                <td><span class="level-badge">100</span></td>
+                                <td><span class="level-badge level-81-100">100</span></td>
                                 <td>Archon Burger</td>
                                 <td>Archon Burger</td>
                                 <td>Archon Burger</td>
